--- a/client/src/assets/styles/slick.css
+++ b/client/src/assets/styles/slick.css
@@ -152,7 +152,7 @@
 .slick-dots li.slick-active button:before {
 	opacity: 0.75;
 	color: #000;
-} /*# sourceMappingURL=slick-theme.min.css.map */
+}
 .slick-next {
 	right: -2px !important;
 	top: -44px;
